--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.2"
+  },
+  "scripts": {
+    "build": "tsc",
+    "crawl": "ts-node src/example/crawl-tweets.ts"
   }
 }
