--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "twitter-crawler",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "description": "Crawl Twitter with a real browser like Chrome or Firefox",
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
